# crazys-wm-mod

./: CHANGES.md  TODO.md
 crazys-wm-mod/Resources/Scripts/: DefaultGirl.xml  DefaultInteract.lua  GirlLostGamble.lua  MeetArenaTry.lua  MeetCastingTry.lua  MeetClinicTry.lua  MeetTownDefault.lua  PunishCustomer.lua  SexText.lua
 crazys-wm-mod/src/engine/: FileList.cpp  FileList.h
 crazys-wm-mod/src/engine/interface/: cChoiceMessage.cpp  cChoiceMessage.h  cFont.cpp  cFont.h  cImageCache.cpp  cInterfaceWindow.cpp  cWindowManager.cpp  cWindowManager.h
 crazys-wm-mod/src/engine/widgets/: cCheckBox.cpp  cListBox.cpp  cListBox.h  cScrollBar.cpp
 crazys-wm-mod/src/engine/xml/: getattr.cpp
 crazys-wm-mod/src/game/: CMakeLists.txt  Constants.cpp  Constants.h  Game.cpp  Game.hpp  IBuilding.cpp  cGirls.cpp  cGirls.h  cJobManager.cpp  cRival.h  gang_missions.cpp
 crazys-wm-mod/src/game/buildings/: cDungeon.h  cMovieStudio.cpp  cMovieStudio.h
 crazys-wm-mod/src/game/character/: cCustomers.cpp  cPlayer.cpp  sGirl.hpp
 crazys-wm-mod/src/game/jobs/: Film.cpp  GenericJob.h  Therapy.cpp  WorkAdvertising.cpp  WorkBarCook.cpp  WorkBarPiano.cpp  WorkBarSinger.cpp  WorkBarStripper.cpp  WorkBarWaitress.cpp  WorkBarmaid.cpp  WorkBeastCapture.cpp  WorkBeastCare.cpp  WorkBrothelMassusse.cpp  WorkBrothelStripper.cpp  WorkCameraMage.cpp  WorkCatacombRancher.cpp  WorkCityGuard.cpp  (+58 more)
 crazys-wm-mod/src/interface/: cInterfaceWindow.cpp
 crazys-wm-mod/src/lua/: CMakeLists.txt
Resources/Scripts/: DefaultInteract.lua
cmake/: FindSDL2TTF.cmake
src/game/: CMakeLists.txt  fakemain.cpp
(+16 files in other folders)
