
# build own lua
add_library(lua src/lapi.h
        src/print.c
        src/lzio.h
        src/lzio.c
        src/lvm.h
        src/lvm.c
        src/lundump.h
        src/lundump.c
        src/lualib.h
        src/luaconf.h
        src/lua.h
        src/lua.c
        src/ltm.h
        src/ltm.c
        src/ltablib.c
        src/ltable.h
        src/ltable.c
        src/lstrlib.c
        src/lstring.h
        src/lstring.c
        src/lstate.h
        src/lstate.c
        src/lparser.h
        src/lparser.c
        src/loslib.c
        src/lopcodes.h
        src/lopcodes.c
        src/lobject.h
        src/lobject.c
        src/loadlib.c
        src/lmem.h
        src/lmem.c
        src/lmathlib.c
        src/llimits.h
        src/llex.h
        src/llex.c
        src/liolib.c
        src/linit.c
        src/lgc.h
        src/lgc.c
        src/lfunc.c
        src/lfunc.h
        src/ldump.c
        src/ldo.h
        src/ldo.c
        src/ldebug.h
        src/ldebug.c
        src/ldblib.c
        src/lcode.c
        src/lcode.h
        src/lbaselib.c
        src/lauxlib.h
        src/lauxlib.c
        src/lapi.c
        src/lapi.h)

target_include_directories(lua PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)